--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@
   
       variables:
         wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
-        dotnetSdkVersion: '5.x'
+        dotnetSdkVersion: '5.0'
   
       steps:
       - task: UseDotNet@2
